--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<link rel="stylesheet" href="css/mystyles.css">
+    <link rel="stylesheet" href="css/mystyles.css">
 </head>
+
 <body>
 
-<div id="myDIV" class="header">
-  <h2 style="margin:5px">Personal Information</h2>
-  <input type="text" id="myInput" placeholder="Title...">
-  <span onclick="newElement()" class="addBtn">Add</span>
-</div>
+    <div id="myDIV" class="header">
+        <h2 style="margin:5px">Personal Information</h2>
+        <input type="text" id="myInput" placeholder="First Name, Last Name, Home">
+        <span onclick="newElement()" class="addBtn">Add</span>
+    </div>
 
-<ul id="myUL">
-  
-</ul>
-<script src="js/index.js"></script>
+    <ul id="myUL">
+
+    </ul>
+    <script src="js/index.js"></script>
 </body>
+
 </html>
